classDiagram
    direction LR

    class Node {
        +id: int
        +x: float
        +z: float
        +active: bool
        +u_x: float
        +u_z: float
        +force_x: float
        +force_z: float
        +fixed_x: bool
        +fixed_z: bool
        +to_dict(): dict
    }

    class Element {
        +node_i: Node
        +node_j: Node
        +k: float
    }

    class Structure {
        +width: int
        +height: int
        +nodes: list~Node~
        +elements: list~Element~
        +to_dict(): dict
        +from_dict(data): Structure
    }

    class PhysicsSolver {
        <<static>>
        +calculate_element_stiffness(k, node_i_pos, node_j_pos): np.ndarray
        +solve_system(K, F, fixed_dofs): np.ndarray | None
    }

    class TopologyOptimizer {
        +solve_step(): bool
        +optimize_step(remove_ratio, max_displacement_limit): tuple[bool, str]
        +check_stability_and_get_main_component(): tuple[bool, set[int]]
        +beautify_topology(iterations): dict
    }

    class Visualizer {
        <<static>>
        +plot_structure(...): Figure
        +compute_element_values(...): list[float]
    }

    Structure "1" *-- "*" Node : enthält
    Structure "1" *-- "*" Element : enthält
    Element --> Node : node_i
    Element --> Node : node_j
    TopologyOptimizer --> Structure : optimiert
    TopologyOptimizer ..> PhysicsSolver : nutzt
    Visualizer ..> Structure : liest
